fix: migrate dashboard to use "type" instead of "referenceType" field BREAKING CHANGE: The query parameter is now 'type' instead of 'reference_type' https://gravitee.atlassian.net/browse/APIM-4266
(cherry picked from commit f718201c9e5297ea6462f133a8a4c5199ac6e675)